@@ -1,3 +1,6 @@
+3871.	[bug]		Don't publish an activated key automatically before
+			its publish time. [RT #35063]
+
 3870.	[func]		Updated the random number generator used in
 			the resolver to use the updated ChaCha based one
 			(similar to OpenBSD's changes). Also moved the
